<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.oakton.cis258.finalproject_gregmarsh.TipCalculatorActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_calculator"
        android:id="@+id/textView11"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bill_amount"
        android:id="@+id/textView12"
        android:layout_below="@+id/textView11"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="49dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText6"
        android:layout_alignBottom="@+id/textView12"
        android:layout_toEndOf="@id/textView12"
        android:layout_marginStart="60dp"
        android:minWidth="75dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_percentage"
        android:id="@+id/textView15"
        android:layout_below="@+id/textView12"
        android:layout_alignStart="@+id/textView12"
        android:layout_marginTop="21dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText7"
        android:minWidth="75dp"
        android:layout_alignBottom="@+id/textView15"
        android:layout_alignStart="@+id/editText6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percentage"
        android:id="@+id/textView16"
        android:layout_below="@+id/editText7"
        android:layout_alignStart="@+id/textView15"
        android:layout_marginTop="39dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip"
        android:id="@+id/textView16B"
        android:layout_alignBottom="@+id/textView16"
        android:layout_toEndOf="@+id/textView16"
        android:layout_marginStart="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:id="@+id/textView16C"
        android:layout_alignBottom="@+id/textView16B"
        android:layout_toEndOf="@+id/textView16B"
        android:layout_marginStart="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ten"
        android:id="@+id/textView17"
        android:layout_below="@+id/textView16"
        android:layout_alignStart="@+id/textView16"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-"
        android:id="@+id/textView17B"
        android:layout_below="@+id/textView16B"
        android:layout_alignStart="@+id/textView16B"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-"
        android:id="@+id/textView17C"
        android:layout_below="@+id/textView16C"
        android:layout_alignStart="@+id/textView16C"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fifteen"
        android:id="@+id/textView18"
        android:layout_below="@+id/textView17"
        android:layout_alignStart="@+id/textView17"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-"
        android:id="@+id/textView18B"
        android:layout_below="@+id/textView17B"
        android:layout_alignStart="@+id/textView17B"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-"
        android:id="@+id/textView18C"
        android:layout_below="@+id/textView17C"
        android:layout_alignStart="@+id/textView17C"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twenty"
        android:id="@+id/textView19"
        android:layout_below="@+id/textView18"
        android:layout_alignStart="@+id/textView18"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-"
        android:id="@+id/textView19B"
        android:layout_below="@+id/textView18B"
        android:layout_alignStart="@+id/textView18B"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-"
        android:id="@+id/textView19C"
        android:layout_below="@+id/textView18C"
        android:layout_alignStart="@+id/textView18C"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/textView20"
        android:layout_below="@+id/textView19"
        android:layout_alignStart="@+id/textView19"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/textView20B"
        android:layout_below="@+id/textView19B"
        android:layout_alignStart="@+id/textView19B"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/textView20C"
        android:layout_below="@+id/textView19C"
        android:layout_alignStart="@+id/textView19C"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:id="@+id/button10"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:id="@+id/button11"
        android:layout_above="@+id/button10"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" />


</RelativeLayout>
