<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.oakton.cis258.finalproject_gregmarsh.Settings1Activity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_username"
        android:id="@+id/username_label"
        android:layout_marginTop="75dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="77dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextS"
        android:layout_alignBottom="@+id/username_label"
        android:layout_toEndOf="@+id/username_label"
        android:layout_marginStart="35dp"
        android:minWidth="150dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_password"
        android:id="@+id/password_label"
        android:layout_marginTop="125dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="77dp" />

    <EditText
        android:inputType="textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextS2"
        android:layout_alignBottom="@+id/password_label"
        android:layout_toEndOf="@+id/password_label"
        android:layout_marginStart="35dp"
        android:minWidth="150dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:id="@+id/password_confirm"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/password_label"
        android:layout_alignEnd="@+id/password_label" />

    <EditText
        android:inputType="textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextS3"
        android:layout_alignBottom="@+id/password_confirm"
        android:layout_toEndOf="@+id/password_confirm"
        android:layout_marginStart="35dp"
        android:minWidth="150dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorite_color"
        android:id="@+id/textViewS4"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/password_confirm"
        android:layout_alignEnd="@+id/password_confirm" />

    <EditText
        android:inputType="textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextS4"
        android:layout_alignBottom="@+id/textViewS4"
        android:layout_toEndOf="@+id/textViewS4"
        android:layout_marginStart="35dp"
        android:minWidth="150dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:id="@+id/buttonS"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="64dp" />

</RelativeLayout>
